[package]
name = "hangman"
version = "0.1.0"
authors = ["Mihir Gadgil <mmgadgil20@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [lib]
# crate-type = ["rlib", "cdylib"]

[dependencies]
# wasm-bindgen = "0.2.79"
rand = "0.8.5"
